--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "ilya/asm",
-  "description": "Тестовое задание для компании ASM",
+  "name": "ilya/ams",
+  "description": "Тестовое задание для компании AMS",
   "minimum-stability": "stable",
   "license": "MIT",
   "authors": [
